listings/ch04-understanding-ownership/no-listing-14-dangling-reference/output.txt
$ cargo run
   Compiling ownership v0.1.0 (file:///projects/ownership)
error[E0106]: missing lifetime specifier
(エラー: ライフタイム指定子がありません)
 --> src/main.rs:5:16
  |
5 | fn dangle() -> &String {
  |                ^ expected named lifetime parameter
  |                  (名前付きのライフタイムパラメータが期待されていました)
  |
  = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
  = (助言: この関数の戻り値型は、借用した値を含んでいますが、借用される値がどこにもありません)
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
(助言: `'static`ライフタイムを使うことを検討してください、ただし`const`または`static`から借用した値を返すのでない限り、これはあまり使われません)
  |
5 | fn dangle() -> &'static String {
  |                 +++++++
help: instead, you are more likely to want to return an owned value
(助言: または、所有権を持つ値を返す方がいいかもしれません)
  |
5 - fn dangle() -> &String {
5 + fn dangle() -> String {
  |

For more information about this error, try `rustc --explain E0106`.
error: could not compile `ownership` (bin "ownership") due to 1 previous error
